--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=
 url=https://github.com/martin-eden/Embedded-me_StreamTokenizer
 author=Martin Eden
 maintainer=Martin Eden
-depends=me_BaseTypes,me_BaseInterfaces
+depends=me_BaseTypes,me_BaseInterfaces,me_StreamsCollection,me_AddrsegTools
